<package format="2">
  <name>rqt_py_trees_creator</name>
  <version>0.1.0</version>
  <description>
    rqt_py_trees_creator provides a GUI plugin for creating py_trees
  </description>

  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_py_trees_creator</url>
  <url type="repository">https://github.com/naveedhd/rqt_py_trees_creator</url>
  <url type="bugtracker">https://github.com/naveedhd/rqt_py_trees_creator/issues</url>

  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>